--- a/app/src/main/res/values/constants.xml
+++ b/app/src/main/res/values/constants.xml
@@ -8,6 +8,7 @@
 	<string name="api_path_upload" translatable="false">%1$sApi/webserver/uploadRunData</string>
 	<string name="api_query_template" translatable="false">{\'studentno\':\'%1$s\',\'uid\':\'%2$s\'}</string>
 	<string name="api_upload_template" translatable="false">{\'begintime\':\'%1$d\',\'endtime\':\'%2$d\',\'uid\':\'%3$s\',\'schoolno\':\'%4$s\',\'distance\':\'%5$g\',\'speed\':\'%6$g\',\'studentno\':\'%7$s\',\'atttype\':\'%8$s\',\'eventno\':\'%9$s\',\'location\':\'%10$s\',\'usetime\':\'%11$d\'}</string>
+	<string name="pref_key_is_first_run" translatable="false">KEY_IS_FIRST_RUN</string>
 	<string name="pref_key_incomplete_record" translatable="false">KEY_INCOMPLETE_RECORD</string>
 	<string name="pref_key_user" translatable="false">KEY_USER</string>
 	<string name="pref_key_zoom" translatable="false">KEY_ZOOM</string>
