Allow changing record date.

--- a/app/src/main/res/xml/debug_pref.xml
+++ b/app/src/main/res/xml/debug_pref.xml
@@ -6,4 +6,7 @@
 	<SwitchPreferenceCompat
 		app:key="@string/pref_key_log_location"
 		app:title="@string/enable_location_logging" />
+	<SwitchPreferenceCompat
+		app:key="@string/pref_key_allow_change_date"
+		app:title="@string/allow_change_date" />
 </androidx.preference.PreferenceScreen>
