--- a/app/src/main/res/drawable/ic_add.xml
+++ b/app/src/main/res/drawable/ic_add.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<vector android:autoMirrored="true"
-	android:viewportHeight="24.0"
-	android:viewportWidth="24.0"
-	android:height="24dp"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
 	android:width="24dp"
-	xmlns:android="http://schemas.android.com/apk/res/android">
+	android:height="24dp"
+	android:viewportWidth="24"
+	android:viewportHeight="24">
 	<path
 		android:fillColor="#FF000000"
 		android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
