--- a/app/src/main/res/layout/fragment_record_editor.xml
+++ b/app/src/main/res/layout/fragment_record_editor.xml
@@ -5,9 +5,11 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:padding="@dimen/padding_large"
+	android:paddingStart="@dimen/padding_large"
+	android:paddingEnd="@dimen/padding_large"
+	android:paddingTop="@dimen/padding_medium"
 	android:orientation="vertical"
-	tools:context=".RecordEditorActivity">
+	tools:context=".RecordEditorFragment">
 	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
@@ -30,12 +32,12 @@
 				android:layout_height="wrap_content" />
 		</LinearLayout>
 		<ImageButton
+			android:id="@+id/button_edit_date"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:background="?attr/selectableItemBackgroundBorderless"
 			android:src="@drawable/ic_edit"
 			android:contentDescription="@string/edit"
-			android:onClick="onDateEditClicked"
 			app:tint="?android:attr/textColorPrimary"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintTop_toTopOf="parent"
@@ -62,12 +64,12 @@
 				android:layout_height="wrap_content" />
 		</LinearLayout>
 		<ImageButton
+			android:id="@+id/button_edit_time"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:background="?attr/selectableItemBackgroundBorderless"
 			android:src="@drawable/ic_edit"
 			android:contentDescription="@string/edit"
-			android:onClick="onTimeEditClicked"
 			app:tint="?android:attr/textColorPrimary"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintTop_toTopOf="parent"
@@ -77,23 +79,5 @@
 		android:id="@+id/checkbox_uploaded"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="@string/uploaded"
-		android:onClick="onUploadedClicked"/>
-	<LinearLayout
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_gravity="end">
-		<Button
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="@string/cancel"
-			android:onClick="onCancelClicked"
-			style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush" />
-		<Button
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="@string/ok"
-			android:onClick="onOkClicked"
-			style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush" />
-	</LinearLayout>
+		android:text="@string/uploaded"/>
 </LinearLayout>
