--- a/app/src/main/res/layout/fragment_record_editor.xml
+++ b/app/src/main/res/layout/fragment_record_editor.xml
@@ -79,5 +79,11 @@
 		android:id="@+id/checkbox_uploaded"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="@string/uploaded"/>
+		android:text="@string/uploaded" />
+	<com.google.android.material.button.MaterialButton
+		android:id="@+id/button_copy_record"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="@string/copy_record"
+		style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
 </LinearLayout>
