Use LiveData to avoid accessing destroyed activities.
The coroutines in viewModelScope will continue to run after
configuration changes, but the activities and views it captures won't be
updated. With the help of LiveData, UI updating logic is moved to
LiveData.observe, which won't be executed if the activity is destroyed.

Fixes #2, and fixes #3.

--- a/app/src/main/res/layout/fragment_record_editor.xml
+++ b/app/src/main/res/layout/fragment_record_editor.xml
@@ -79,11 +79,13 @@
 		android:id="@+id/checkbox_uploaded"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:enabled="false"
 		android:text="@string/uploaded" />
 	<com.google.android.material.button.MaterialButton
 		android:id="@+id/button_copy_record"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:enabled="false"
 		android:text="@string/copy_record"
 		style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
 </LinearLayout>
