--- a/app/src/main/res/layout/fragment_bind_login.xml
+++ b/app/src/main/res/layout/fragment_bind_login.xml
@@ -24,6 +24,7 @@
 				android:id="@+id/dropdown_schools"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
+				android:cursorVisible="false"
 				android:focusable="false"
 				android:textIsSelectable="false" />
 		</com.google.android.material.textfield.TextInputLayout>
