--- a/app/src/main/res/layout/activity_bind.xml
+++ b/app/src/main/res/layout/activity_bind.xml
@@ -35,7 +35,7 @@
 			android:layout_height="0dp"
 			app:layout_constraintTop_toBottomOf="@id/progress_bind"
 			app:layout_constraintBottom_toTopOf="@id/layout_buttons">
-			<org.ddosolitary.greendragonfly.FixedViewPager
+			<androidx.viewpager2.widget.ViewPager2
 				android:id="@+id/pager_bind"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent" />
