Support newer server versions.

--- a/app/src/main/res/values/constants.xml
+++ b/app/src/main/res/values/constants.xml
@@ -5,9 +5,10 @@
 	<string name="api_get_user_template" translatable="false">name=[\'bangding\',\'%1$s\',\'student\',\'%2$s\',\'%3$s\']</string>
 	<string name="api_path_get_plan" translatable="false">%1$sApi/webserver/downloadRunParam</string>
 	<string name="api_path_query_count" translatable="false">%sApi/webserver/getRunDataSummary</string>
-	<string name="api_path_upload" translatable="false">%1$sApi/webserver/uploadRunData</string>
+	<string name="api_path_upload" translatable="false">%1$sApi/webserver/uploadRunDataNew</string>
 	<string name="api_query_template" translatable="false">{\'studentno\':\'%1$s\',\'uid\':\'%2$s\'}</string>
-	<string name="api_upload_template" translatable="false">{\'begintime\':\'%1$d\',\'endtime\':\'%2$d\',\'uid\':\'%3$s\',\'schoolno\':\'%4$s\',\'distance\':\'%5$g\',\'speed\':\'%6$g\',\'studentno\':\'%7$s\',\'atttype\':\'%8$s\',\'eventno\':\'%9$s\',\'location\':\'%10$s\',\'usetime\':\'%11$d\'}</string>
+	<string name="api_upload_location_template" translatable="false">%1$f,%2$f;%3$d;null;null;%4$f;null</string>
+	<string name="api_upload_template" translatable="false">{\'begintime\':\'%1$d\',\'endtime\':\'%2$d\',\'uid\':\'%3$s\',\'schoolno\':\'%4$s\',\'distance\':\'%5$g\',\'speed\':\'%6$g\',\'studentno\':\'%7$s\',\'atttype\':\'%8$s\',\'eventno\':\'%9$s\',\'location\':\'%10$s\',\'pointstatus\':\'1\',\'usetime\':\'%11$d\'}</string>
 	<string name="pref_key_allow_record_editing" translatable="false">KEY_ALLOW_RECORD_EDITING</string>
 	<string name="pref_key_allow_mocking" translatable="false">KEY_ALLOW_MOCKING</string>
 	<string name="pref_key_is_first_run" translatable="false">KEY_IS_FIRST_RUN</string>
