--- a/app/src/main/res/layout/fragment_record_editor.xml
+++ b/app/src/main/res/layout/fragment_record_editor.xml
@@ -81,11 +81,23 @@
 		android:layout_height="wrap_content"
 		android:enabled="false"
 		android:text="@string/uploaded" />
-	<com.google.android.material.button.MaterialButton
-		android:id="@+id/button_copy_record"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:enabled="false"
-		android:text="@string/copy_record"
-		style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content">
+		<com.google.android.material.button.MaterialButton
+			android:id="@+id/button_copy_record"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginEnd="@dimen/margin_medium"
+			android:enabled="false"
+			android:text="@string/copy_record"
+			style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
+		<com.google.android.material.button.MaterialButton
+			android:id="@+id/button_delete_record"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:enabled="false"
+			android:text="@string/delete"
+			style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
+	</LinearLayout>
 </LinearLayout>
